fix styles on mobile

--- a/src/scss/scanner.scss
+++ b/src/scss/scanner.scss
@@ -83,8 +83,10 @@
             justify-content : center;
             p {
                 line-height: 2em;
-                font-size: 18px;
                 font-weight: bold;
+                @include breakpoint(medium) {
+                    font-size: 18px;
+                }
             }
         }
     }
